# Optical-Mark-Recognition

./: .gitignore  METHODOLOGY.md  README.md  main.py  patch_parser.py  pyproject.toml  test_ransac.py
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/opticalmarkingrecognition/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: TEST_1.csv
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/example/opticalmarkingrecognition/: CameraScreen.kt  MainActivity.kt  NativeEngine.kt
android/app/src/main/java/com/example/opticalmarkingrecognition/database/: Database.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/opticalmarkingrecognition/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
core/: CMakeLists.txt
core/include/: grader.hpp  scanner.hpp  utils.hpp
core/src/: grader.cpp  main.cpp  scanner.cpp  utils.cpp
docs/: DATABASE.md  PLAN.md  UI.md
experiments/: end2end.py
experiments/answer_parser/: answer_parser.py  answer_parser_backup.py  grid_strategy.py  grid_strategy_parser.py  show_detection.py  test_info_boxes.py
experiments/images_parser/: ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  SCANNER_COMPARISON.md  page_scanner.py  robust_scanner.py  test.py  test_page_scanner.py
experiments/pdf_generate/: dynamic_advance.py  test.py  test_advance.py
test/keys/: TEST_1.csv  TEST_1.xlsx
test/templates/: Professional_OMR_120.json  Professional_OMR_200.json  Professional_OMR_300.json  Professional_OMR_45.json
ui/: app.py  core_bridge.py
ui/design/: index.html
ui/static/: app.js  style.css
ui/templates/: index.html
(+8 files in other folders)
