[project]
name = "optical-mark-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.10",
    "uvicorn>=0.42.0",
]
